fix: swager docs; tasks
