# src/resources/tasks/task.db.repository.js
@@ -12,6 +12,15 @@ const get = async (boardId, taskId) => {
   }
 };
 
+const getByColumnId = async (boardId, columnId) => {
+  try {
+    const task = await Task.findOne({ boardId, columnId });
+    return task;
+  } catch (e) {
+    logger.warn(JSON.stringify(e));
+  }
+};
+
 const createTask = async task => Task.create(task);
 
 const deleteTask = async (boardId, taskId) =>
@@ -28,6 +37,7 @@ const deleteTasks = async boardId => Task.deleteMany({ boardId });
 module.exports = {
   getAll,
   get,
+  getByColumnId,
   update,
   createTask,
   deleteTask,
